--- a/NPC_name_generator.ipynb
+++ b/NPC_name_generator.ipynb
@@ -70,6 +70,7 @@
     }
    ],
    "source": [
+    "# get ourself a dictionary of English words. can be called with words.words()\n",
     "nltk.download('words')"
    ]
   },
@@ -543,9 +544,11 @@
     "id": "VFlaLB9NRoMX"
    },
    "source": [
+    "# Generate Names\n",
+    "\n",
     "We now have a dictionary where the keys are the preceding tuple and the items are a list of the possible next letters with each letter appearing in the list multiple times according to its frequency as the end of the n-gram. \n",
     "\n",
-    "Therefore to generate a name all we need to do is start with the sequence [\">\", \">\"] and repeatedly pick a random element from the corresponding dictionary entry\n",
+    "Therefore to generate a name all we need to do is start with the sequence [\">\", \">\"] with as many > symbols as n-1 and repeatedly pick a random element from the corresponding dictionary entry\n",
     "\n",
     "As a final flourish we shall check that we have not produced and English word (this happens quite often)"
    ]
@@ -570,8 +573,7 @@
       "ooops English word\n",
       "ooops English word\n",
       "ooops English word\n",
-      "ooops English word\n",
-      "['Lorromel', 'Cobbille', 'Astia', 'Laken', 'Ky', 'Farkee', 'Jessin', 'Lorie', 'Domermar', 'Kasee']\n"
+      "['Rashajen', 'Lashby', 'Shtor', 'Domichaw', 'Jacorist', 'Trie', 'Lashanoa', 'Decarkie', 'Skylorig', 'Alogales']\n"
      ]
     }
    ],
@@ -617,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -630,7 +632,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Devan', 'Johned', 'Kese', 'Jorald', 'Owell', 'Jackar', 'Antz', 'Frandr', 'Arlo', 'Gilber']\n"
+      "ooops English word\n",
+      "['Ferard', 'Leon', 'Braul', 'Kwask', 'Turo', 'Jord', 'Etan', 'Wallyj', 'Camelc', 'Lakili']\n"
      ]
     }
    ],
@@ -645,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "id": "lBLYB2zHxw7c"
    },
@@ -655,12 +658,7 @@
      "output_type": "stream",
      "text": [
       "ooops English word\n",
-      "ooops English word\n",
-      "ooops English word\n",
-      "ooops English word\n",
-      "ooops English word\n",
-      "ooops English word\n",
-      "['Elia', 'Seashi', 'Jasa', 'Gustre', 'Jamili', 'Carly', 'Shyke', 'Lynn', 'Jordin', 'Dasha']\n"
+      "['Tailli', 'Marian', 'Vilain', 'Logan', 'Gilada', 'Gina', 'Calyn', 'Susele', 'Haylee', 'Kaelea']\n"
      ]
     }
    ],
