improve doc string

--- a/image_categoriser.ipynb
+++ b/image_categoriser.ipynb
@@ -170,12 +170,15 @@
     "    This function takes an image file path, an OpenAI API key, permissible style categories,\n",
     "    and permissible subject categories. It sends the image to the OpenAI API for analysis and\n",
     "    returns a pipe-separated string containing the most appropriate style, subject, and description.\n",
-    "\n",
-    "    :param image_path: The file path to the image.\n",
-    "    :param api_key: Optional API key for authentication.\n",
-    "    :param style_categories: List of permissible style categories.\n",
-    "    :param subject_categories: List of permissible subject categories.\n",
-    "    :return: A pipe-separated string in the format \"Style|Subject|Description\".\n",
+    "    \n",
+    "    Args:\n",
+    "        image_path (str): The file path to the image.\n",
+    "        api_key (str): API key for authentication.\n",
+    "        param style_categories (List[str]): List of permissible style categories.\n",
+    "        param subject_categories (List[str]):  List of permissible subject categories.\n",
+    "    \n",
+    "    Returns: \n",
+    "        Tuple[str, str, str]: A pipe-separated string in the format \"Style|Subject|Description\".\n",
     "    \"\"\"\n",
     "    \n",
     "    # Getting the base64 string required by the OpenAI API\n",
@@ -190,7 +193,7 @@
     "Permissible subjects are: {\", \".join(subject_categories)} . Pick only the most appropriate one.\n",
     "The description should be no more than 30 words long and should describe the picture as accurately as possible\n",
     "Return no other detail other than the 3 pipe separated items so for instance if the style was {style_categories[0]}\n",
-    "and the subject was {subject_categories[0]} and the desctiption was 'A small apple in a green bowl' you would return:\n",
+    "and the subject was {subject_categories[0]} and the description was 'A small apple in a green bowl' you would return:\n",
     "{style_categories[0]}|{subject_categories[0]}|A small apple in a green bowl\n",
     "\"\"\"\n",
     "    \n",
