remove disused libraries

--- a/ollama_llava_image_categoriser_1.ipynb
+++ b/ollama_llava_image_categoriser_1.ipynb
@@ -18,12 +18,18 @@
    "outputs": [],
    "source": [
     "# import at the library level to avoid function name confusion between libraries for simplicity\n",
+    "import base64\n",
     "import datetime\n",
     "import fnmatch\n",
     "import functools\n",
+    "import json\n",
     "import ollama\n",
+    "import openai\n",
+    "import openpyxl\n",
     "import os\n",
     "import pandas as pd\n",
+    "import requests\n",
+    "import sys\n",
     "import typing"
    ]
   },
@@ -181,6 +187,7 @@
     "\n",
     "partial_categorise = functools.partial(\n",
     "    categorise,\n",
+    "#     api_key = OPENAI_API_KEY,\n",
     "    style_categories = style_categories,\n",
     "    subject_categories = subject_categories,\n",
     ")"
